src/app/globals.css
@import "tailwindcss";

:root {
  --background: #F9FAFF;
  --foreground: #171717;
  --secondary: #FDC435;
  --secondary-background: #FDB935;
  --primary-border: #E8ECF4;
  --hover-border: #CBD5E1;
  --shadow-border: #64748b;
}

@theme inline {
  --color-background: var(--background);
  --color-foreground: var(--foreground);
  --color-secondary: var(--secondary);
  --color-background-input: var(--background-input);
  --color-secondary-background: var(--secondary-background);
  --color-primary-border: var(--primary-border);
  --font-sans: var(--font-geist-sans);
  --font-mono: var(--font-geist-mono);
}

@media not all and (prefers-color-scheme: dark) {
  :root {
    --background: #0a0a0a;
    --foreground: #ededed;
  }
}

html, body{
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  height: 100%;
  width: 100%;
}

body {
  background: var(--background);
  color: var(--foreground);
  font-family: Arial, Helvetica, sans-serif;
}

